Add functionallity to download a file if exists in the sistem

--- a/XmlToJson/appsettings.json
+++ b/XmlToJson/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AppSettings": {
-    "OutputDirectory": "C:/XmlToJsonConverter/JsonFolder"
+    "OutputDirectory": "C:\\XmlToJsonConverter\\JsonFolder"
   },
   "AllowedHosts": "*"
 }
